--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
@@ -4,7 +4,7 @@
         <div class="tabs-container" [ngStyle]="{'transition': 'all 1.5s ease','transform':translate}">
             <div class="tabs">
                 <div class="tab" *ngFor="let category of categories" [ngClass]="[category.active]">
-                    <a routerLink="category/{{category.id}}" (click)="selectTab(category.id)">
+                    <a routerLink="tab/{{category.id}}" (click)="selectTab(category.id)">
                         <span class="icon-dice"><span class="tab-text">Estrategia</span> </span>
                         <!--<p>Estrategia</p>--> 
                         <!--{{category.name}} {{category.icon}}-->
@@ -15,4 +15,4 @@
     </div>
     <div class="tab-header-col-md-1"><a class="arrow-sign" (click)="rightclick()"><span class="icon-arrow-right"></span></a></div>
 </div>
-<!--<router-outlet></router-outlet>-->
+<router-outlet></router-outlet>
