QUestion panel updated.

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -1,6 +1,6 @@
 ﻿<div>Tab panel {{id}}</div>
 <router-outlet></router-outlet>
-<div class="panel-article">
+<!--<div class="panel-article">
     <div class="row">
         <div class="col-sm-1 left-gap">
             <img class="image-border" src="../../../../images/border.png" />
@@ -24,4 +24,4 @@
 
     </div>
 
-</div>
+</div>-->
