--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
@@ -52,7 +52,7 @@ span {
 
 .tabs > .tab {
     padding: 12px;
-    font-size: 1.5em;
+    font-size: 16px;
     display: block;
     float: left;
     line-height: 45px;
