--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-subpanel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-subpanel.component.html
@@ -1,5 +1,4 @@
-﻿<div>Subpnel {{id}}</div>>
-<div class="tab" *ngFor="let question of questions">
+﻿<div class="tab" *ngFor="let question of questions">
     <div class="panel-article">
         <div class="row">
             <div class="col-sm-1 left-gap">
@@ -14,7 +13,7 @@
                         <h4>{{question.questioner.name}}</h4>
                     </div>
                     <div class="right-footer">
-                        <h4>{{question.questioner.title}}</h4>
+                        <h4>Respuestas</h4>
                         <span class="counter-box">{{question.responseCount}}</span>
                     </div>
                 </div>
