--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-subpanel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-subpanel.component.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col-sm-11">
                 <h2>{{question.title}}</h2>
-                <h4>{{question.subTitle}}</h4>
+                <h4 class="subtitle">{{question.subTitle}}</h4>
                 <p>{{question.questionBody}}</p>
                 <div class="row article-footer">
                     <div class="left-footer">
@@ -14,7 +14,7 @@
                     </div>
                     <div class="right-footer">
                         <h4>Respuestas</h4>
-                        <span class="counter-box">{{question.responseCount}}</span>
+                        <span class="counter-box">{{question.responseCount}}+</span>
                     </div>
                 </div>
             </div>
