--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/search/apSearch.component.html
@@ -1,4 +1,4 @@
-﻿<div class="row bottom-float">
+﻿<div class="bottom-float">
     <div class="col-md-12">
         <div class="input-group" id="adv-search">
             <input type="text" class="form-control searc-box fixed-height" placeholder="Search for snippets" />
@@ -9,24 +9,23 @@
                         <div class="dropdown-menu dropdown-menu-right" role="menu">
                             <form class="form-horizontal" role="form">
                                 <div class="form-group">
-                                    <label for="filter">Filter by</label>
-                                    <select class="form-control">
-                                        <option value="0" selected>All Snippets</option>
-                                        <option value="1">Featured</option>
-                                        <option value="2">Most popular</option>
-                                        <option value="3">Top rated</option>
-                                        <option value="4">Most commented</option>
-                                    </select>
+                                    <label for="contain" style="cursor:pointer"> Ver todas </label>
                                 </div>
                                 <div class="form-group">
-                                    <label for="contain">Author</label>
-                                    <input class="form-control" type="text" />
+                                    <label for="contain" style="cursor:pointer">Finanzas</label>
                                 </div>
                                 <div class="form-group">
-                                    <label for="contain">Contains the words</label>
-                                    <input class="form-control" type="text" />
+                                    <label for="contain" style="cursor:pointer">Gestión humana</label>
                                 </div>
-                                <button type="submit" class="btn btn-primary" ><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                                <div class="form-group">
+                                    <label for="contain" style="cursor:pointer">Liderazgo</label>
+                                </div>
+                                <div class="form-group">
+                                    <label for="contain" style="cursor:pointer">Procesos</label>
+                                </div>
+                                <div class="form-group">
+                                    <label for="contain" style="cursor:pointer">Estrategia</label>
+                                </div>
                             </form>
                         </div>
                     </div>
