--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
@@ -5,48 +5,36 @@
     margin-left: auto;
     margin-top: 25px;
     margin-bottom: 130px;
+    width: 94%;
 }
 
 span {
     display: block;
 }
 
-@media (min-width: 768px) {
-    .tab-panel-container {
-        width: 750px;
-    }
-}
-
-@media (min-width: 992px) {
-    .tab-panel-container {
-        width: 970px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .tab-panel-container {
-        width: 1097px;
-    }
-}
 
 .tab-header-col-md-1 {
-    width: 2%;
     float: left;
     min-height: 66px;
     padding-top: 19px;
 }
 
 .tab-header-col-md-10 {
-    width: 96%;
+    width: 92%;
     float: left;
     overflow: hidden; /* used for carousel*/
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
-.tab-carousel {
-    transition: all 1.5s ease;
-}
 
 .tabs-container {
+    width: 100%;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+.tabs {
     width: 4000px;
 }
 
@@ -56,7 +44,7 @@ span {
     display: block;
     float: left;
     line-height: 45px;
-    background-color: #f5f5f5;
+    background-color: #e0dede;
     margin: 0 10px;
     min-width: 150px;
     text-align: center;
@@ -96,6 +84,6 @@ a {
     background-color: #fdbc1e;
 }
 
-    .tabs > .active > a, .tabs > .active > a:hover, .tabs > .active > a:focus {
-        color: white;
-    }
+.tabs > .active > a, .tabs > .active > a:hover, .tabs > .active > a:focus {
+    color: white;
+}
