--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/app.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/app.component.html
@@ -11,7 +11,9 @@
         padding: 4px;
         border-radius: 18px;
     }
-
+    .parent-padding {
+        padding-top: 135px;
+    }
     .footer {
         height: 60px;
         width: 100%;
