Question home page nav bar added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/app.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/app.component.html
@@ -11,14 +11,18 @@
         padding: 4px;
         border-radius: 18px;
     }
+
     .parent-padding {
         padding-top: 135px;
     }
+
     .footer {
         height: 60px;
         width: 100%;
         background-color: darkgray;
         color: white;
+        position: absolute;
+        bottom: 0;
     }
 
     .footer-left {
