Question components  files added And Quuestion module fixed and routing through module fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/apbanner.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/apbanner.component.html
@@ -1,5 +1,4 @@
-﻿
-<div class="carousel">
+﻿<div class="carousel">
     <ul class="slides">
         <li *ngFor="let image of images">
             <h2>{{image.title}}</h2>
