--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/search/apSearch.component.html
@@ -1,4 +1,4 @@
-﻿<div class="bottom-float">
+﻿<div [ngClass]="placeBottom">
     <!--<div class="col-md-12">-->
         <div class="input-group" id="adv-search">
             <input type="text" class="form-control searc-box fixed-height" placeholder="Search for snippets" />
