--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
@@ -1,4 +1,5 @@
-﻿<style>
+﻿<h1>Question Module</h1>
+<!--<style>
     .banner-container {
         position: relative;
         z-index: 9999999;
@@ -13,13 +14,27 @@
       min-height: 66px !important;
         background-image: url(../images/background.png);
 }
-
-    /*.navbar {
-        min-height: 66px;
-        background-image: url(../images/background.png);
-    }*/
+    .body-padding {
+        padding-top:135px;
+    }
+    h1{
+            margin-left: 33%;
+    }
 </style>
 <div class="banner-container">
     <ap-nav [className]="'backgroundset'"></ap-nav>
-    <ap-search></ap-search>
+    
 </div>
+<div class="row body-padding">
+    <h1>iAsk question about business</h1>
+    <ap-search placeBottom=""></ap-search>
+    <div class="col-md-3">
+        Question List
+    </div>
+    <div class="col-md-6" >
+        <answer-panel></answer-panel>
+    </div>
+    <div class="col-md-3">
+        Advertisement
+    </div>
+</div>-->
