--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
@@ -1,21 +1,18 @@
 ﻿<div class="row">
     <div class="tab-panel-container">
-        <div class="tab-header-col-md-1"> <a class="arrow-sign" (click)="leftclick()"><span class="icon-arrow-left"></span></a></div>
+        <div class="tab-header-col-md-1"> <a class="arrow-sign" (click)="rightclick()"><span class="icon-arrow-left"></span></a></div>
         <div class="tab-header-col-md-10">
             <div class="tabs-container" >
                 <div class="tabs" [ngStyle]="{'transition': 'all 1.5s ease','transform':translate}">
                     <div class="tab" *ngFor="let category of categories" [ngClass]="[category.active]">
                         <a routerLink="tab/{{category.id}}" (click)="selectTab(category.id)">
                             <span class="{{category.icon}}"><span class="tab-text">{{category.name}}</span> </span>
-                            <!--<p>Estrategia</p>-->
-                            <!--{{category.name}} {{category.icon}}-->
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="tab-header-col-md-1"><a class="arrow-sign" (click)="rightclick()"><span class="icon-arrow-right"></span></a></div>
+        <div class="tab-header-col-md-1"><a class="arrow-sign"  (click)="leftclick()"><span class="icon-arrow-right"></span></a></div>
     </div>
-
 </div>
 <router-outlet></router-outlet>
