Question  loaded from service added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/answer-panel/answer-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/answer-panel/answer-panel.component.html
@@ -39,16 +39,16 @@
     }
 </style>
 <h1>&iquest;What is balanced score card?</h1>
-<div *ngFor="let question of questions">
+<div *ngFor="let answer of answerList">
     <div class="row">
         <div class="left-border">
             <img class="image-border" src="../../../../images/border.png" />
         </div>
         <div class="article-details">
             <img class="user-image" src="../../../../images/avatar.png" />
-            <div class="header-info">{{question.title}}</div>
-            <div class="header-info">{{question.subTitle}}</div>
-            <p class="answer-text">{{question.questionBody}}</p>
+            <div class="header-info">{{answer.user.name}},{{answer.user.occupassion}}</div>
+            <div class="header-info">{{answer.topics}},{{date.getMonthName(answer.date.getMonth())}} {{answer.date.getDate()}} {{answer.date.getFullYear()}}</div>
+            <p class="answer-text">{{answer.answerText}}</p>
         </div>
     </div>
     <hr />
