--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
@@ -5,7 +5,7 @@
             <div class="tabs-container" >
                 <div class="tabs" [ngStyle]="{'transition': 'all 1.5s ease','transform':translate}">
                     <div class="tab" *ngFor="let category of categories" [ngClass]="[category.active]">
-                        <a routerLink="tab/{{category.id}}" (click)="selectTab(category.id)">
+                        <a  (click)="selectTab(category.id)">
                             <span class="{{category.icon}}"><span class="tab-text">{{category.name}}</span> </span>
                         </a>
                     </div>
