--- a/AltaPerspectiva/src/Altaperspectiva.OpenID.Web/Views/Authorization/Authorize.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenID.Web/Views/Authorization/Authorize.cshtml
@@ -10,7 +10,7 @@
 
         <input type="hidden" name="request_id" value="@Model.RequestId" />
 
-        <input formaction="@Url.Action("Accept")" class="btn btn-lg btn-success" name="Authorize" type="submit" value="Yes" />
-        <input formaction="@Url.Action("Deny")" class="btn btn-lg btn-danger" name="Deny" type="submit" value="No" />
+        <input formaction="@Url.Action("submit.Accept")" class="btn btn-lg btn-success"  type="submit" value="Yes" />
+        <input formaction="@Url.Action("submit.Deny")" class="btn btn-lg btn-danger"  type="submit" value="No" />
     </form>
 </div>
