--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
@@ -5,31 +5,19 @@
     
     @if (User?.Identity?.IsAuthenticated ?? false)
     {
-        <h1>Welcome, @User.Identity.Name</h1>
-        
-
-        <p>
-            @foreach (var claim in Context.User.Claims)
-            {
-                <div>@claim.Type: <b>@claim.Value</b></div>
-            }
-        </p>
-
-        if (!string.IsNullOrEmpty(Model))
+        if (!string.IsNullOrEmpty(Model) && !string.IsNullOrEmpty(User.Identity.Name))
         {
-            <h3>Message received from the resource controller: @Model</h3>
+            <div class="body-minHeight">
+                <app username="'@User.Identity.Name'+'#'+'@Model'">Loading ...</app>
+            </div>
         }
 
-        <form action="~/" method="post">
-            <button class="btn btn-lg btn-warning" type="submit">Query the resource controller</button>
-        </form>
-
-        <a class="btn btn-lg btn-danger" href="/signout">Sign out</a>
     }
 
     else
     {
-        <h1>Welcome, anonymous</h1>
-        <a class="btn btn-lg btn-success" href="/signin">Sign in</a>
+        <div class="body-minHeight">
+            <app username="">Loading ...</app>
+        </div>
     }
 </div>
