--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
@@ -19,3 +19,24 @@ else
         <app username="">Loading ...</app>
     </div>
 }
+
+<div class="footer">
+    <div class="footer-container">
+        <div class="footer-left">
+            <div class="borrder-circle">
+                <i class="fa fa-facebook fa-2x"></i>
+            </div>
+            <div class="borrder-circle">
+                <i class="fa fa-twitter fa-2x"></i>
+            </div>
+            <div class="borrder-circle">
+                <i class="fa fa-instagram fa-2x"></i>
+            </div>
+        </div>
+        <div class="footer-right">
+            <div>nostros</div>
+            <div>Terminos de usos</div>
+            <div>Contactenos</div>
+        </div>
+    </div>
+</div>
