--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/search/search.css
@@ -17,7 +17,7 @@ a {
 }
 
 .question-List {
-    list-style: none;
+    list-style-image:url(../images/question-mark.jpg)
 }
 
 
@@ -39,7 +39,8 @@ a {
 
 .dropdown-menu {
     padding: 0 !important;
-    min-width: 300px !important;
+    min-width: 640px !important;
+    right: 121px;
 }
 
 .dropdown-menu-right {
@@ -145,25 +146,16 @@ a {
     display: block;
 }
 
-.question-dropdown {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1000;
-    display: none;
-    float: left;
-    min-width: 160px;
-    padding: 5px 0;
-    margin: 2px 0 0;
-    font-size: 14px;
-    text-align: left;
-    list-style: none;
-    background-color: #fff;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
-    border: 1px solid #ccc;
-    border: 1px solid rgba(0, 0, 0, .15);
-    border-radius: 4px;
-    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+.question-components {
+    margin: 20px;
+}
+.catagory-dropdown {
+    width:80%;
+}
+.question-text {
+    border-radius:5px;
+}
+label {
+        font-weight: normal;
+    font-size: 16px;
 }
