--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
@@ -25,7 +25,7 @@
 <div class="row  body-padding">
     <apq-nav></apq-nav>
     <h2>iAsk question about business</h2>
-    <autocomplete></autocomplete>
+    <apq-search></apq-search>
     
     <div class="col-md-3">
         <question-panel></question-panel>
