shared module created and css fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
@@ -11,7 +11,7 @@
 <div class="banner-container">
     <ap-banner></ap-banner>
     <ap-nav></ap-nav>
-    <ap-search></ap-search>
+    <ap-search placeBottom="bottom-float"></ap-search>
 </div>
 <div>
     <ap-tabs></ap-tabs>
