--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-menu-panel/question-menu-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-menu-panel/question-menu-panel.component.html
@@ -1,23 +1,4 @@
-﻿<style>
-    .question-title {
-        color: dodgerblue;
-        border-bottom: 1px solid #efe6e6;
-    }
-
-    .question-list {
-        color: #797575;
-    }
-
-    .menu-container {
-        float: right;
-        text-align: left;
-        padding: 10px;
-        margin-top: 50px;
-        width: 60%;
-        font-size: 12px;
-    }
-</style>
-<div class="menu-container">
+﻿<div class="menu-container">
     <div  class="row">
         <div >
             <div class="question-title">Related Question</div>
