--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-panel/question-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-panel/question-panel.component.html
@@ -1,45 +1,4 @@
-﻿
-<style>
-    .user-image {
-        height: 40px;
-        width: 40px;
-        border-radius: 20px;
-    }
-
-    .answer-text {
-        font-size: 16px;
-        color: #797575;
-    }
-
-    .image-border {
-        height: 300px;
-        width: 3px;
-    }
-
-    .left-border {
-        float: left;
-    }
-
-    .header-info {
-        font-size: 12px;
-    }
-
-    .article-details {
-        float: left;
-        width: 98%;
-        padding-left: 2%;
-    }
-
-    hr {
-        width: 150%;
-        margin-left: -30%;
-    }
-    h1{
-        margin-left: -17px;
-    }
-</style>
-
-<div *ngFor="let answer of answerList">
+﻿<div *ngFor="let answer of answerList">
     <h1>&iquest;What is balanced score card?</h1>
     <div class="row">
         <div class="left-border">
